$Id: NEWS,v 1.21 2007-12-14 02:25:38 wilsonp Exp $

Version 2.8.1

BUGS FIXED
	* fixed bug in recognizing loops in pure decay [PP] (12/12/07)
	  
NEW FEATURES
	* Added alternative dose approximation - infinte line source. 
	  [PP] (10/19/07)

CODE UPDATES

-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.8.0

BUGS FIXED
	* fixed 2 bugs in continuous energy gamma source spectrum
	  integration [PP] (05/04/07)
	  
NEW FEATURES
	* added clearance indices for Copper from US-NRC [PW]
 	  (06/26/06)
        * Allow initial isotopes to be in the isomeric state. 
	  [PW] (02/16/2007)
        * added support for FEIND data library handler [PP]
	  (04/17/2007)

CODE UPDATES

-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.7.8

BUGS FIXED
        * Fixed double free bug in destructor for ALARALib.  Double
	  fclose() avoided [PW] (10/12/2006)

NEW FEATURES

CODE UPDATES

-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.7.7

BUGS FIXED
        * run_samples.sh script now creates dump_files directory
          CORRECTLY!!! [PW] (08/01/2005)
        * improved/corrected output for constituent output
          [PW] (08/01/2005)  

NEW FEATURES

CODE UPDATES

-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.7.6
	
BUGS FIXED
        * run_samples.sh script now creates dump_files directory
	  [PW] (05/24/2005)
	* removed some old "sequential charged particle reaction" code
	  that was never used and caused occasional core dumps 
	  [PW] (05/24/2005)
	* added include to dant2alara.C to provide std::min()
	  [PW] (05/03/2005)

NEW FEATURES

CODE UPDATES
	
-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 	

Version 2.7.5
	
BUGS FIXED

NEW FEATURES

CODE UPDATES
	* rewrote dant2alara in C++ eliminating any FORTRAN code from