@@ -1,4 +1,4 @@
-/* $Id: Mixture.h,v 1.21 2008-07-31 18:05:34 phruksar Exp $ */
+/* $Id: Mixture.h,v 1.22 2008-08-06 17:38:09 phruksar Exp $ */
 #include "alara.h"
 
 #ifndef _MIXTURE_H
@@ -87,9 +87,6 @@ protected:
   /// The response totalled over the whole mixture is stored in an array
   /// to enable the printing of a table of totals.
   double *total;
-
-  /// The response totaled over the initial mixture
-  double total_initial;
   
   /// Variable for contact dose
   double *gammaAttenCoef;
